--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ org.gradle.daemon=false
 	authors=Hurricaaane (Ha3), Sollace
 	description=An overly complicated sound mod
 	url=http://presencefootsteps.ha3.eu
-	version=r15
-	release=SNAPSHOT
+	version=r16
+	release=RELEASE
 
 # Dependencies
 	fabric_version=0.3.0+
