Update to 1.15-pre3

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.2
-	loader_version=0.4.8+
+	minecraft_version=1.15-pre3
+	yarn_mappings=1.15-pre3+build.2:v2
+	loader_version=0.7.2+build.174
 
 # Mod Properties
 	group=com.presencefootsteps
@@ -17,6 +17,5 @@ org.gradle.daemon=false
 	release=RELEASE
 
 # Dependencies
-	fabric_version=0.3.0+
-	minelp_version=1.14.4-3.3-pre8
-	kirin_version=1.14.4-1.4.4
+	minelp_version=1.15-pre3-4-1.15-pre3-SNAPSHOT
+	kirin_version=1.15-pre3-1.5-1.15-pre3-SNAPSHOT
