--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 plugins {
     id 'java-library'
-    id 'fabric-loom' version '0.2.5-SNAPSHOT'
+    id 'fabric-loom' version '0.2.6-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -50,16 +50,16 @@ dependencies {
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 
-    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
-    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
-    modApi "net.fabricmc.fabric-api:fabric-keybindings:0.1.0+"
-    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.0+"
+    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+"
+    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.2+"
+    modApi "net.fabricmc.fabric-api:fabric-keybindings-v0:0.1.1+"
+    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.8+"
 
     modApi "com.minelittlepony:Kirin:${project.kirin_version}"
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
-	modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
-    modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
+    modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
+    //modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
 }
 
 processResources {
