Update and enable mod menu

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
     modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
-    //modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
+    modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 }
 
 processResources {
