Update dependencies, update build.gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ org.gradle.daemon=false
 
 # Dependencies
 	modmenu_version=1.7.15-unstable.1.15-pre1+build.13
-	minelp_version=1.15-pre3-4-1.15-pre3-SNAPSHOT
-	kirin_version=1.15-pre3-1.5-1.15-pre3-SNAPSHOT
+	minelp_version=4-1.15-pre3-SNAPSHOT
+	kirin_version=1.5-1.15-pre3-SNAPSHOT
