Update to 1.15-pre6

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,21 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.15-pre3
-	yarn_mappings=1.15-pre3+build.2:v2
-	loader_version=0.7.2+build.174
+  # check these on https://fabricmc.net/use
+  minecraft_version=1.15-pre6
+  yarn_mappings=1.15-pre6+build.1:v2
+  loader_version=0.7.2+build.174
 
 # Mod Properties
-	group=com.presencefootsteps
-	displayname=Presence Footsteps
-	authors=Hurricaaane (Ha3), Sollace
-	description=An overly complicated sound mod
-	url=http://presencefootsteps.ha3.eu
-	version=r19
-	release=RELEASE
+  group=com.presencefootsteps
+  displayname=Presence Footsteps
+  authors=Hurricaaane (Ha3), Sollace
+  description=An overly complicated sound mod
+  url=http://presencefootsteps.ha3.eu
+  version=r19
+  release=RELEASE
 
 # Dependencies
-	modmenu_version=1.7.15-unstable.1.15-pre1+build.13
-	minelp_version=4-1.15-pre3-SNAPSHOT
-	kirin_version=1.5-1.15-pre3-SNAPSHOT
+  modmenu_version=1.8.0.1.15-pre3+build.14
+  minelp_version=4-1.15-pre6-SNAPSHOT
+  kirin_version=1.5-1.15-pre6-SNAPSHOT
