--- a/build.gradle
+++ b/build.gradle
@@ -33,13 +33,6 @@ minecraft {
     refmapName = 'presencefootsteps.mixin.refmap.json'
 }
 
-// check for updates every build when on CI
-if (System.env.CI) {
-    configurations.all {
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-    }
-}
-
 repositories {
     maven {
         name = 'minelp'
@@ -55,7 +48,6 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}"
     modApi "net.fabricmc:fabric-loader:${project.loader_version}"
-
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 
     modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+"
@@ -67,7 +59,7 @@ dependencies {
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
     modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
-    modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
+    // modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 }
 
 processResources {
