--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.15-pre6
-  yarn_mappings=1.15-pre6+build.1:v2
+  minecraft_version=1.15
+  yarn_mappings=1.15+build.1:v2
   loader_version=0.7.2+build.174
 
 # Mod Properties
@@ -13,10 +13,10 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r19
+  version=r20
   release=RELEASE
 
 # Dependencies
   modmenu_version=1.8.0.1.15-pre3+build.14
-  minelp_version=4-1.15-pre6-SNAPSHOT
-  kirin_version=1.5-1.15-pre6-SNAPSHOT
+  minelp_version=4-1.15
+  kirin_version=1.5-1.15
