Back to our regularly scheduled programming

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r20
-  release=RELEASE
+  version=r21
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.8.0.1.15-pre3+build.14
