--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,9 @@ org.gradle.daemon=false
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
   version=r21
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
-  modmenu_version=1.8.0.1.15-pre3+build.14
-  minelp_version=4-1.15
+  modmenu_version=1.8.+
+  minelp_version=4.0.3-1.15
   kirin_version=1.5-1.15
