--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.15
-  yarn_mappings=1.15+build.1:v2
-  loader_version=0.7.2+build.174
+  minecraft_version=1.15.2
+  yarn_mappings=1.15.2+build.7:v2
+  loader_version=0.7.6+build.180
 
 # Mod Properties
   group=com.presencefootsteps
@@ -18,5 +18,5 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=1.8.+
-  minelp_version=4.0.3-1.15
-  kirin_version=1.5-1.15
+  minelp_version=4.0.3-1.15.2-SNAPSHOT
+  kirin_version=1.5.2-1.15.2-SNAPSHOT
