--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=1.8.+
-  minelp_version=4.0.3-1.15.2-SNAPSHOT
-  kirin_version=1.5.2-1.15.2-SNAPSHOT
+  minelp_version=4.0.4-1.15.2
+  kirin_version=1.5.2-1.15.2
