--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.15.2
-  yarn_mappings=1.15.2+build.7:v2
-  loader_version=0.7.6+build.180
+  minecraft_version=20w10a
+  yarn_mappings=20w10a+build.16:v2
+  loader_version=0.7.8+build.187
 
 # Mod Properties
   group=com.presencefootsteps
@@ -13,8 +13,8 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r22
-  release=RELEASE
+  version=r23
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.8.+
