--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 
     modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+"
-    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.2+"
+    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.2+b7f9825dd1"
     modApi "net.fabricmc.fabric-api:fabric-keybindings-v0:0.1.1+"
     modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.8+"
 
@@ -68,8 +68,8 @@ dependencies {
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
     modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
-    modImplementation("io.github.prospector:modmenu:${project.modmenu_version}") {
-        exclude group: "net.fabricmc.fabric-api"
+    modCompileOnly("io.github.prospector:modmenu:${project.modmenu_version}") {
+        transitive = false
     }
 }
 
