--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Fabric Properties
-  # check these on https://fabricmc.net/use
-  minecraft_version=20w10a
-  yarn_mappings=20w10a+build.16:v2
-  loader_version=0.7.8+build.187
+  # check these on https://modmuss50.me/fabric.html
+  minecraft_version=20w13b
+  yarn_mappings=20w13b+build.5:v2
+  loader_version=0.7.8+build.189
 
 # Mod Properties
   group=com.presencefootsteps
@@ -17,6 +17,6 @@ org.gradle.daemon=false
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.8.+
-  minelp_version=4.0.4-1.15.2
-  kirin_version=1.5.2-1.15.2
+  modmenu_version=1.11.+
+  minelp_version=4.0.7-20w13b-SNAPSHOT
+  kirin_version=1.6-20w13b-SNAPSHOT
