--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ org.gradle.daemon=false
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
   version=r23
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.11.+
