--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=20w13b
-  yarn_mappings=20w13b+build.5:v2
-  loader_version=0.7.8+build.189
+  minecraft_version=20w16a
+  yarn_mappings=20w16a+build.3:v2
+  loader_version=0.8.2+build.194
 
 # Mod Properties
   group=com.presencefootsteps
@@ -18,5 +18,5 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=1.11.+
-  minelp_version=4.0.7-20w13b-SNAPSHOT
-  kirin_version=1.6-20w13b-SNAPSHOT
+  minelp_version=4.1-20w16a-SNAPSHOT
+  kirin_version=1.6.1-20w16a-SNAPSHOT
