--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=20w16a
-  yarn_mappings=20w16a+build.3:v2
-  loader_version=0.8.2+build.194
+  minecraft_version=20w20b
+  yarn_mappings=20w20b+build.1:v2
+  loader_version=0.8.3+build.196
 
 # Mod Properties
   group=com.presencefootsteps
@@ -13,10 +13,10 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r24
+  version=r25
   release=RELEASE
 
 # Dependencies
   modmenu_version=1.11.+
-  minelp_version=4.1-20w16a-SNAPSHOT
-  kirin_version=1.6.1-20w16a-SNAPSHOT
+  minelp_version=4.1-20w20b-SNAPSHOT
+  kirin_version=1.6.4-20w20b-SNAPSHOT
