--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.16.2
-  yarn_mappings=1.16.2+build.19:v2
-  loader_version=0.9.1+build.205
-  fabric_version=0.18.0+build.397-1.16
+  minecraft_version=1.16.4
+  yarn_mappings=1.16.4+build.6
+  loader_version=0.10.6+build.214
+  fabric_version=0.25.1+build.416-1.16
 
 # Mod Properties
   group=com.presencefootsteps
@@ -14,8 +14,8 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r28
-  release=RELEASE
+  version=r29
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
