--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.16.4
-  yarn_mappings=1.16.4+build.6
-  loader_version=0.10.6+build.214
-  fabric_version=0.25.1+build.416-1.16
+  minecraft_version=20w46a
+  yarn_mappings=20w46a+build.15
+  loader_version=0.10.8
+  fabric_version=0.26.0+1.17
 
 # Mod Properties
   group=com.presencefootsteps
@@ -14,10 +14,10 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r29
+  version=r30
   release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
-  minelp_version=4.2-1.16.2
-  kirin_version=1.7-1.16.2
+  minelp_version=4.3-20w46a-SNAPSHOT
+  kirin_version=1.8-20w46a-SNAPSHOT
