--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=20w49a
-  yarn_mappings=20w49a+build.1
-  loader_version=0.10.8
-  fabric_version=0.27.2+1.17
+  minecraft_version=21w05b
+  yarn_mappings=21w05b+build.5
+  loader_version=0.11.1
+  fabric_version=0.30.1+1.17
 
 # Mod Properties
   group=com.presencefootsteps
@@ -17,6 +18,6 @@ org.gradle.daemon=false
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.12.+
-  minelp_version=4.3-20w49a-SNAPSHOT
-  kirin_version=1.8-20w49a-SNAPSHOT
+  modmenu_version=1.14.+
+  minelp_version=4.3-21w05b-SNAPSHOT
+  kirin_version=1.8-21w05b-SNAPSHOT
