--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=21w05b
-  yarn_mappings=21w05b+build.5
-  loader_version=0.11.1
-  fabric_version=0.30.1+1.17
+  minecraft_version=21w11a
+  yarn_mappings=21w11a+build.29
+  loader_version=0.11.3
+  fabric_version=0.32.5+1.17
 
 # Mod Properties
   group=com.presencefootsteps
@@ -19,5 +19,5 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=1.14.+
-  minelp_version=4.3-21w05b-SNAPSHOT
-  kirin_version=1.8-21w05b-SNAPSHOT
+  minelp_version=4.3-21w11a-SNAPSHOT
+  kirin_version=1.8-21w11a-SNAPSHOT
