--- a/build.gradle
+++ b/build.gradle
@@ -14,17 +14,17 @@ def createVersion() {
         parts.push project.release
     }
 
-    if (System.env.TRAVIS_BRANCH != null && System.env.TRAVIS_BRANCH != 'master') {
-        parts.push System.env.TRAVIS_BRANCH
+    def branch = System.env.TRAVIS_BRANCH
+
+    if (branch != null && branch != 'master' && !project.minecraft_version.startsWith(branch)) {
+        parts.push branch
     }
 
-    if (System.env.TRAVIS_BRANCH != project.minecraft_version) {
-       parts.push project.minecraft_version
-    }
+    parts.push project.minecraft_version
 
     def ver = project.version
     if (parts.size > 0) {
-      return ver + '+' + parts.join('-')
+      return ver + '-' + parts.join('-')
     }
     return ver
 }
@@ -39,6 +39,10 @@ minecraft {
 }
 
 repositories {
+    maven {
+        name = 'modmenu'
+        url = 'https://maven.terraformersmc.com/releases'
+    }
     maven {
         name = 'minelp'
         url = 'https://repo.minelittlepony-mod.com/maven/snapshot'
@@ -64,9 +68,7 @@ dependencies {
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
     modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
-    modCompileOnly("io.github.prospector:modmenu:${project.modmenu_version}") {
-        transitive = false
-    }
+    modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
