--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=21w19a
-  yarn_mappings=21w19a+build.6
+  minecraft_version=1.17-rc1
+  yarn_mappings=1.17-rc1+build.4
   loader_version=0.11.3
-  fabric_version=0.34.4+1.17
+  fabric_version=0.34.8+1.17
 
 # Mod Properties
   group=com.presencefootsteps
@@ -18,6 +18,6 @@ org.gradle.daemon=false
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.14.+
-  minelp_version=4.3-21w19a-SNAPSHOT
-  kirin_version=1.8-21w19a-SNAPSHOT
+  modmenu_version=2.0.0-beta.7
+  minelp_version=4.3-1.17-rc1-SNAPSHOT
+  kirin_version=1.8.6-1.17-rc1-SNAPSHOT
