--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ org.gradle.daemon=false
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
   version=r30
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
-  minelp_version=4.3-1.17-rc1-SNAPSHOT
-  kirin_version=1.8.6-1.17-rc1-SNAPSHOT
+  minelp_version=4.3-1.17-rc1
+  kirin_version=1.8.6-1.17-rc1
