--- a/gradle.properties
+++ b/gradle.properties
@@ -14,10 +14,10 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r30
+  version=r31
   release=RELEASE
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
   minelp_version=4.3-1.17-rc1
-  kirin_version=1.8.6-1.17-rc1
+  kirin_version=1.8.7-1.17
