--- a/build.gradle
+++ b/build.gradle
@@ -66,10 +66,10 @@ dependencies {
     modApi fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
     modApi fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
 
-    modApi "com.minelittlepony:Kirin:${project.kirin_version}"
-    include "com.minelittlepony:Kirin:${project.kirin_version}"
+    modApi "com.minelittlepony:kirin:${project.kirin_version}"
+    include "com.minelittlepony:kirin:${project.kirin_version}"
 
-    modImplementation "com.minelittlepony:MineLittlePony:${project.minelp_version}"
+    modImplementation "com.minelittlepony:minelittlepony:${project.minelp_version}"
     modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
