--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
-  minelp_version=4.3-1.17-rc1
-  kirin_version=1.8.7-1.17
+  minelp_version=4.3.4
+  kirin_version=1.9.1
