--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.17-rc1
-  yarn_mappings=1.17-rc1+build.4
-  loader_version=0.11.3
-  fabric_version=0.34.8+1.17
+  minecraft_version=1.18-pre8
+  yarn_mappings=1.18-pre8+build.2
+  loader_version=0.12.5
+  fabric_version=0.43.0+1.18
 
 # Mod Properties
   group=com.presencefootsteps
@@ -14,10 +14,8 @@ org.gradle.daemon=false
   authors=Hurricaaane (Ha3), Sollace
   description=An overly complicated sound mod
   url=http://presencefootsteps.ha3.eu
-  version=r32
-  release=RELEASE
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
-  minelp_version=4.3.4
-  kirin_version=1.9.1
+  minelp_version=4.4.0-beta.2
+  kirin_version=1.10.0-beta.2
