Update dependencies and build target

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.17-rc1
-  yarn_mappings=1.17-rc1+build.4
-  loader_version=0.11.3
-  fabric_version=0.34.8+1.17
+  minecraft_version=1.17
+  yarn_mappings=1.17+build.5
+  loader_version=0.12.0
+  fabric_version=0.34.9+1.17
 
 # Mod Properties
   group=com.presencefootsteps
@@ -20,4 +20,4 @@ org.gradle.daemon=false
 # Dependencies
   modmenu_version=2.0.0-beta.7
   minelp_version=4.3.4
-  kirin_version=1.9.1
+  kirin_version=1.9.2-beta.1
